# a2wsgi

./: .coveragerc  .gitignore  README.md  a2wsgi.py  benchmark.py  pyproject.toml  requirements.txt  test_a2wsgi.py
.github/workflows/: ci.yml  test.yml
a2wsgi/: __init__.py  asgi.py  asgi_typing.py  types.py  wsgi.py  wsgi_typing.py
script/: upload.py  version.py
tests/: test_asgi.py  test_wsgi.py
